--- a/AndroidProjects/app/src/main/res/layout/docentes_principal.xml
+++ b/AndroidProjects/app/src/main/res/layout/docentes_principal.xml
@@ -45,7 +45,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="30dp"
         android:layout_marginBottom="27dp"
-        android:onClick="botonIrCrearCurso"
+        android:onClick="botonCrear"
         android:text="+"
         android:textSize="50sp"
         app:layout_constraintBottom_toBottomOf="parent"
