--- a/AndroidProjects/app/src/main/res/layout/curso_ingresar.xml
+++ b/AndroidProjects/app/src/main/res/layout/curso_ingresar.xml
@@ -12,7 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="66dp"
-        android:text="Ingresa tu curso"
+        android:text="Ingresa a un nuevo curso"
         android:textColor="#FFFFFF"
         android:textSize="35sp"
         android:textStyle="bold"
