--- a/AndroidProjects/app/src/main/res/layout/docentes_principal.xml
+++ b/AndroidProjects/app/src/main/res/layout/docentes_principal.xml
@@ -29,12 +29,10 @@
         android:layout_height="0dp"
         android:layout_marginStart="69dp"
         android:layout_marginEnd="69dp"
-        android:layout_marginBottom="26dp"
         android:text="Estos son tus cursos"
         android:textAlignment="center"
         android:textColor="#FFFFFF"
         android:textSize="25sp"
-        app:layout_constraintBottom_toTopOf="@+id/spinnerCursosProfesor"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
@@ -49,19 +47,18 @@
         android:text="+"
         android:textSize="50sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/spinnerCursosProfesor" />
+        app:layout_constraintEnd_toEndOf="parent" />
 
-    <Spinner
-        android:id="@+id/spinnerCursosProfesor"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="1dp"
-        android:layout_marginEnd="1dp"
-        android:layout_marginBottom="347dp"
+    <ListView
+        android:id="@+id/listV"
+        android:layout_width="364dp"
+        android:layout_height="440dp"
+        android:layout_marginTop="36dp"
         app:layout_constraintBottom_toTopOf="@+id/botonIrCrearCurso"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.489"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintTop_toTopOf="@+id/textView2"
+        app:layout_constraintVertical_bias="0.0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
