--- a/AndroidProjects/app/src/main/res/layout/estudiantes_principal.xml
+++ b/AndroidProjects/app/src/main/res/layout/estudiantes_principal.xml
@@ -44,26 +44,13 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
-    <Spinner
-        android:id="@+id/spinnerCursosEstudiante"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="1dp"
-        android:layout_marginTop="70dp"
-        android:layout_marginEnd="1dp"
+    <ListView
+        android:id="@+id/lis1"
+        android:layout_width="341dp"
+        android:layout_height="397dp"
+        app:layout_constraintBottom_toTopOf="@+id/botonIrAgregarCurso"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
-
-    <Button
-        android:id="@+id/button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="172dp"
-        android:onClick="boton1"
-        android:text="Iniciar"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/spinnerCursosEstudiante" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
