--- a/AndroidProjects/app/src/main/res/layout/lobby.xml
+++ b/AndroidProjects/app/src/main/res/layout/lobby.xml
@@ -9,8 +9,8 @@
 
     <TextView
         android:id="@+id/textoGrupoCodigo"
-        android:layout_width="128dp"
-        android:layout_height="0dp"
+        android:layout_width="295dp"
+        android:layout_height="53dp"
         android:layout_marginTop="64dp"
         android:layout_marginBottom="141dp"
         android:text="Codigo"
@@ -29,7 +29,8 @@
         android:layout_marginStart="73dp"
         android:layout_marginEnd="73dp"
         android:layout_marginBottom="52dp"
-        android:text="Listo"
+        android:onClick="botonempezar"
+        android:text="Siguiente"
         android:textSize="25sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -45,7 +46,8 @@
         android:textColor="#FFFFFF"
         android:textSize="30sp"
         app:layout_constraintBottom_toTopOf="@+id/textoGrupo2"
-        app:layout_constraintStart_toStartOf="@+id/textoGrupo4"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textoGrupoCodigo" />
 
     <TextView
@@ -56,7 +58,9 @@
         android:textColor="#FFFFFF"
         android:textSize="30sp"
         app:layout_constraintBottom_toTopOf="@+id/textoGrupo3"
-        app:layout_constraintStart_toStartOf="@+id/textoGrupo1"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.501"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textoGrupo1" />
 
     <TextView
@@ -67,20 +71,34 @@
         android:textColor="#FFFFFF"
         android:textSize="30sp"
         app:layout_constraintBottom_toTopOf="@+id/textoGrupo4"
-        app:layout_constraintStart_toStartOf="@+id/textoGrupo2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textoGrupo2" />
 
     <TextView
         android:id="@+id/textoGrupo4"
-        android:layout_width="121dp"
-        android:layout_height="0dp"
+        android:layout_width="160dp"
+        android:layout_height="70dp"
         android:layout_marginBottom="168dp"
         android:text="Grupo 4"
         android:textColor="#FFFFFF"
         android:textSize="30sp"
         app:layout_constraintBottom_toTopOf="@+id/botonIniciarActividadLobby"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textoGrupo3" />
+
+    <Button
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="botoninicio"
+        android:text="Iniciar"
+        app:layout_constraintBottom_toTopOf="@+id/botonIniciarActividadLobby"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textoGrupo4" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
