Se agregó clase Tema

--- a/AndroidProjects/app/src/main/res/layout/grupo_asignacion.xml
+++ b/AndroidProjects/app/src/main/res/layout/grupo_asignacion.xml
@@ -12,7 +12,7 @@
         android:layout_width="165dp"
         android:layout_height="67dp"
         android:layout_marginTop="132dp"
-        android:text="Grupo #1"
+        android:text="Grupo #?"
         android:textColor="#FFFFFF"
         android:textSize="35sp"
         android:textStyle="bold"
