--- a/AndroidProjects/app/src/main/res/layout/tema_asignacion.xml
+++ b/AndroidProjects/app/src/main/res/layout/tema_asignacion.xml
@@ -8,6 +8,21 @@
     tools:context=".AsignacionTema">
 
     <Button
+        android:id="@+id/botonIrCrearCurso2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="52dp"
+        android:onClick="agregar"
+        android:text="+"
+        android:textSize="50sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.885"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/botonElegirTema"
+        app:layout_constraintVertical_bias="1.0" />
+
+    <Button
         android:id="@+id/botonElegirTema"
         android:layout_width="224dp"
         android:layout_height="61dp"
@@ -19,7 +34,7 @@
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.795" />
+        app:layout_constraintVertical_bias="0.628" />
 
     <Spinner
         android:id="@+id/spinnerTemas"
