--- a/AndroidProjects/app/src/main/res/layout/activity_palabras_clave.xml
+++ b/AndroidProjects/app/src/main/res/layout/activity_palabras_clave.xml
@@ -4,11 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Ideas">
+    tools:context=".palabras_clave">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar3"
-        android:layout_width="409dp"
+        android:layout_width="match_parent"
         android:layout_height="63dp"
         android:background="@drawable/fondo_estudiante"
         android:minHeight="?attr/actionBarSize"
@@ -17,22 +17,11 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ListView
-        android:id="@+id/listaIdeas"
-        android:layout_width="333dp"
-        android:layout_height="390dp"
-        android:background="@drawable/borde_verde"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.395" />
-
     <TextView
         android:id="@+id/hipotesis_nombre_clase"
         android:layout_width="181dp"
         android:layout_height="30dp"
-        android:text="Lluvia de Ideas"
+        android:text="Palabras clave"
         android:textAlignment="center"
         android:textColor="@android:color/white"
         android:textSize="24sp"
@@ -41,50 +30,44 @@
         app:layout_constraintStart_toStartOf="@+id/toolbar3"
         app:layout_constraintTop_toTopOf="@+id/toolbar3" />
 
-    *
-
-
-    <TextView
-        android:id="@+id/textView6"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Ideas"
-        android:textAlignment="center"
-        android:textColor="#6ADB8C"
-        android:textSize="32sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
+    <ListView
+        android:id="@+id/listaPalabras"
+        android:layout_width="304dp"
+        android:layout_height="290dp"
+        android:layout_marginBottom="45dp"
+        android:background="@drawable/borde_verde"
+        app:layout_constraintBottom_toTopOf="@+id/editPalabras"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.109" />
+        app:layout_constraintVertical_bias="0.823" />
 
     <EditText
-        android:id="@+id/subirIdea"
-        android:layout_width="221dp"
-        android:layout_height="37dp"
+        android:id="@+id/editPalabras"
+        android:layout_width="214dp"
+        android:layout_height="41dp"
+        android:layout_marginBottom="28dp"
         android:background="@drawable/borde_verde"
         android:ems="10"
         android:inputType="textPersonName"
         android:textAlignment="center"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/buttonPalabras"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.802" />
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
-        android:id="@+id/buttonIdeasAgregar"
-        android:layout_width="98dp"
-        android:layout_height="36dp"
+        android:id="@+id/buttonPalabras"
+        android:layout_width="96dp"
+        android:layout_height="37dp"
+        android:layout_marginBottom="176dp"
         android:background="@drawable/btn_verde"
-        android:onClick="botonidea"
-        android:text="Button"
+        android:onClick="botonPalabra"
+        android:text="Buscar"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.899" />
+        app:layout_constraintStart_toStartOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
