--- a/AndroidProjects/app/src/main/res/layout/activity_respuesta.xml
+++ b/AndroidProjects/app/src/main/res/layout/activity_respuesta.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Ideas">
-
+    tools:context=".hipotesis">
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar3"
         android:layout_width="409dp"
@@ -17,22 +16,11 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ListView
-        android:id="@+id/listaIdeas"
-        android:layout_width="333dp"
-        android:layout_height="390dp"
-        android:background="@drawable/borde_verde"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.395" />
-
     <TextView
         android:id="@+id/hipotesis_nombre_clase"
         android:layout_width="181dp"
         android:layout_height="30dp"
-        android:text="Lluvia de Ideas"
+        android:text="Respuesta Final"
         android:textAlignment="center"
         android:textColor="@android:color/white"
         android:textSize="24sp"
@@ -41,50 +29,76 @@
         app:layout_constraintStart_toStartOf="@+id/toolbar3"
         app:layout_constraintTop_toTopOf="@+id/toolbar3" />
 
-    *
-
+    <ListView
+        android:id="@+id/IdeasHipotesis"
+        android:layout_width="358dp"
+        android:layout_height="205dp"
+        android:layout_marginBottom="36dp"
+        android:background="@drawable/borde_verde"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.528"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
-        android:id="@+id/textView6"
+        android:id="@+id/textView7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Ideas"
         android:textAlignment="center"
         android:textColor="#6ADB8C"
-        android:textSize="32sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toTopOf="@+id/IdeasHipotesis"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.109" />
+        app:layout_constraintVertical_bias="0.973" />
+
+    <ScrollView
+        android:id="@+id/scrollView4"
+        android:layout_width="361dp"
+        android:layout_height="220dp"
+        android:background="@drawable/borde_verde"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:layout_editor_absoluteY="82dp">
+
+        <TextView
+            android:id="@+id/txt_hipotesis"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:textAlignment="center"
+            android:textColor="@android:color/black" />
+    </ScrollView>
 
     <EditText
-        android:id="@+id/subirIdea"
-        android:layout_width="221dp"
-        android:layout_height="37dp"
+        android:id="@+id/txt_agregar_hipotesis"
+        android:layout_width="223dp"
+        android:layout_height="36dp"
+        android:layout_marginTop="16dp"
         android:background="@drawable/borde_verde"
         android:ems="10"
         android:inputType="textPersonName"
         android:textAlignment="center"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/button7"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.802" />
+        app:layout_constraintTop_toBottomOf="@+id/scrollView4"
+        app:layout_constraintVertical_bias="0.7" />
 
     <Button
-        android:id="@+id/buttonIdeasAgregar"
-        android:layout_width="98dp"
-        android:layout_height="36dp"
+        android:id="@+id/btn_agregar_hipotesis"
+        android:layout_width="94dp"
+        android:layout_height="39dp"
         android:background="@drawable/btn_verde"
-        android:onClick="botonidea"
-        android:text="Button"
+        android:onClick="hipotesis"
+        android:text="Agregar"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.899" />
+        app:layout_constraintTop_toTopOf="@+id/toolbar3"
+        app:layout_constraintVertical_bias="0.528" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
